--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<P id="paragraph1">paragraph1</P>
+    <P id="paragraph2">paragraph2</P>
+    <P id="paragraph3">paragraph3</P>
     <script type="text/javascript" src="./script.js">
 </script>
 
