--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<P id="paragraph1">paragraph-1</P>
-    <P id="paragraph2">paragraph-2</P>
-    <P id="paragraph3">paragraph-3</P>
+	<P id="paragraph1">Paragraph-1</P>
+    <P id="paragraph2">Paragraph-2</P>
+    <P id="paragraph3">Paragraph-3</P>
     <script type="text/javascript" src="./script.js">
 </script>
 
