--- a/main.html
+++ b/main.html
@@ -4,6 +4,28 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+	#yellow{
+    background-color: yellow;
+    border-width: 1px;
+    border: solid;
+    border-color: green;
+    }
+
+    #red{
+    background-color:red;
+    border-width: 1px;
+    border: solid;
+    border-color:black; 
+    }
+
+    #green{
+    background-color:green;
+    border-width: 1px;
+    border: solid;
+    border-color:  yellow;
+        	
+	</style>
 </head>
 
 <body>
