--- a/main.html
+++ b/main.html
@@ -7,19 +7,19 @@
 	<style>
 	#yellow{
     background-color: yellow;
-    border-width: 1px;
+    border-width: 1px solid;
     border-color: green;
     }
 
     #red{
     background-color:red;
-    border-width: 1px;
+    border-width: 1px solid;
     border-color:black; 
     }
 
     #green{
     background-color:green;
-    border-width: 1px;
+    border-width: 1px solid;
     border-color:  yellow;
         	
 	</style>
