--- a/main.html
+++ b/main.html
@@ -7,20 +7,20 @@
 	<style>
 	#yellow{
     background-color: yellow;
-    border-width: 1px solid;
-    border-color: green;
+    border-width: 1px solid green;
+    /* border-color: green; */
     }
 
     #red{
     background-color:red;
-    border-width: 1px solid;
-    border-color:black; 
+    border-width: 1px solid black;
+    /* border-color:black;  */
     }
 
     #green{
     background-color:green;
-    border-width: 1px solid;
-    border-color:  yellow;
+    border-width: 1px solid yellow;
+    /* border-color:  yellow; */
         	
 	</style>
 </head>
