--- a/main.html
+++ b/main.html
@@ -4,25 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-	#yellow{
-    background-color: yellow;
-    border-width: 1px solid green;
-    /* border-color: green; */
-    }
-
-    #red{
-    background-color:red;
-    border-width: 1px solid black;
-    /* border-color:black;  */
-    }
-
-    #green{
-    background-color:green;
-    border-width: 1px solid yellow;
-    /* border-color:  yellow; */
-        	
-	</style>
+	<style></style>
 </head>
 
 <body>
